# summer_practic_task1

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.c
cmake/: MyFunctions.cmake
lib/: CMakeLists.txt
lib/include/: search_replace.h
lib/src/: lib_main.c  search_replace.c
