# Корневой файл сборки проекта (CMakeLists.txt)
# Определяет основные параметры проекта, задает глобальные настройки и подключает подмодули (библиотеку и приложение).
#
# Коликов Глеб Александрович
# Группа МК-101

# Указываем минимально необходимую версию CMake для корректной сборки проекта.
# Версия 3.10 выбрана как стабильный стандарт, поддерживающий все используемые функции.
cmake_minimum_required(VERSION 3.10)

# Объявляем имя проекта и указываем, что он написан на языке C.
# Это помогает CMake настроить правильные флаги компилятора.
project(file_replacer C)

# Добавляем директорию 'cmake' в путь поиска модулей CMake.
# Это позволяет нам использовать команду include() для наших собственных скриптов,
# лежащих в этой папке, как если бы они были стандартными модулями CMake.
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

# Подключаем наш кастомный скрипт с полезными функциями (например, get_all_sources).
include(MyFunctions)

# Проверяем, была ли передана переменная BLOCK_SIZE при конфигурации CMake (через -DBLOCK_SIZE=...).
# Если нет, задаем безопасное и эффективное значение по умолчанию (4096 байт).
if(NOT DEFINED BLOCK_SIZE)
    set(BLOCK_SIZE 4096)
endif()

# Передаем значение BLOCK_SIZE в исходный код как макрос препроцессора (-DBLOCK_SIZE=...).
# Это позволяет коду на C знать размер блока чтения во время компиляции без хардкода.
add_definitions(-DBLOCK_SIZE=${BLOCK_SIZE})

# Добавляем поддиректорию 'lib', где будет собираться наша библиотека с логикой замены.
add_subdirectory(lib)

# Добавляем поддиректорию 'app', где будет собираться основное исполняемое приложение.
add_subdirectory(app)