# Файл сборки приложения (app/CMakeLists.txt)
# Отвечает за компиляцию основного исполняемого файла программы (task1).
#
# Коликов Глеб Александрович
# Группа МК-101

# Вызываем нашу кастомную функцию get_all_sources, которая была определена 
# в cmake/MyFunctions.cmake и подключена в корневом CMakeLists.txt.
# Она автоматически найдет все файлы с расширениями .c и .h в директории src 
# и сохранит их список в переменную APP_SOURCES.
get_all_sources("${CMAKE_CURRENT_SOURCE_DIR}/src" APP_SOURCES)

# Создаем целевой исполняемый файл с именем 'task1' из найденных исходных файлов.
# Это скомпилирует main.c и любые другие файлы в папке app/src в один бинарный файл.
add_executable(task1 ${APP_SOURCES})

# Линкуем (подключаем) нашу библиотеку 'my_library' к исполняемому файлу.
# Ключевое слово PRIVATE означает, что зависимости библиотеки не будут 
# "протекать" наружу, но сам task1 получит полный доступ ко всем функциям 
# и заголовочным файлам (.h) библиотеки my_library.
target_link_libraries(task1 PRIVATE my_library)